<resources>
    <string name="app_name">My Fitness Logger</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="input">Input</string>
    <string name="summary">Zusammenfassung</string>
    <string name="settings">Einstellung</string>
    <string name="gewicht">Gewicht [kg]</string>
    <string name="kfa">KFA [%]</string>
    <string name="weightAndKFA"><![CDATA[Weight & KFA]]></string>
    <string name="training">Training</string>
    <string name="duration">Dauer [h : min]</string>
    <string name="calories">Kalorien [kCal]</string>
    <string name="comment">Bemerkung speichern</string>
    <string name="trainingurl">Training Connection URL</string>
    <string name="fastingurl">Fasting Connection URL</string>
    <string name="stepsgurl">Steps Connection URL</string>
    <string name="WeightAndKFA">Weight and KFA</string>
    <string name="Training">Training</string>
    <string name="Summary">Summary</string>
    <string name="remarksButton">Notes</string>
    <string name="Settings">Settings</string>
    <string name="Berga">Berga</string>
    <string name="noTraining">trainingsfrei</string>
    <string name="fastingButton">Fasting</string>
    <string name="steps">steps</string>
    <string name="stepsButton">Steps</string>
</resources>