<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_weightAndKFA">

    <fragment
        android:id="@+id/navigation_weightAndKFA"
        android:name="com.example.myfitnesslogger.ui.fragments.WeightAndKFAFragment"
        android:label="@string/WeightAndKFA"
        tools:layout="@layout/weightkfa_fragment" />

    <fragment
        android:id="@+id/navigation_training"
        android:name="com.example.myfitnesslogger.ui.fragments.TrainingFragment"
        android:label="@string/Training"
        tools:layout="@layout/weightkfa_fragment" />

    <fragment
        android:id="@+id/navigation_summary"
        android:name="com.example.myfitnesslogger.ui.fragments.SummaryFragment"
        android:label="@string/Summary"
        tools:layout="@layout/summary_fragment" />

    <fragment
        android:id="@+id/navigation_remarks"
        android:name="com.example.myfitnesslogger.ui.fragments.InfosFragment"
        android:label="@string/remarksButton"
        tools:layout="@layout/summary_fragment" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.myfitnesslogger.ui.fragments.SettingsFragment"
        android:label="@string/Settings"
        tools:layout="@layout/settings_fragment" />

</navigation>